--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,7 +2,7 @@
 --
     + Добавлен CHANGELOG
     + Админский nickname вынесен в настройки
-    + Команда "Статистика"
+    + Команда "Статистика" (админская)
 
 01.02.2020 RELEASE_2_1
     * Команда "Профиль" заменена на более короткую "?" для удобства
@@ -13,7 +13,7 @@
     "Боевая" версия бота на СимферопольFS-февраль работала на этой версии.
 
 26.01.2020 RELEASE_2_0
-    + Команда "Результаты"
+    + Команда "Результаты"  (админская)
     + Добавлена настройка таймзоны для подавления предупреждений PHP
     + Команда участники выводит информацию о зарегистрированных (перед началом)
     + Добавлена команда "Профиль" для ручного разбора профилей игроков (без добавления в таблицу)
