Описание нового функционала

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,7 +3,8 @@
     + Добавлен CHANGELOG
     + Админский nickname вынесен в настройки
     + Команда "Статистика" (админская)
-
+    + Воспринимаются ссылки вида https://t.me/<bot>?start=id0 непосредственно на события
+    + Добавлена настройка (BOT_USERNAME) с именем бота
 01.02.2020 RELEASE_2_1
     * Команда "Профиль" заменена на более короткую "?" для удобства
     + Команда "Сброс" удаляет данные пользователя
