--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 История изменений:
 --
+28.02.2020 RELEASE_3_0
+    + Выбор события - аргумент у команды /start
+    + Ссылки на события вида https://t.me/<bot>/?start=id0
     + Добавлен CHANGELOG
     + Админский nickname вынесен в настройки
     + Команда "Статистика" (админская)
